<resources>
    <string name="app_name">WXCO Foods</string>
    <string name="welcome">Welcome,</string>
    <string name="sign_in_to_order">Sign in to order foods now.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="or">Or</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="design_by">Design by Tamer Akdeniz (WXCO Design)</string>
</resources>
